# generic_agents

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/agent-settings/domain/: entities.py  schemas.py
src/agent_settings/dependencies/: business_rules.py  repositories.py  use_cases.py
src/agent_settings/domain/: entities.py  exceptions.py  schemas.py
src/agents/dependencies/: repositories.py  use_cases.py
src/agents/domain/: entities.py  schemas.py
src/app/: __init__.py  main.py
src/app/domain/: __init__.py  exceptions.py
src/app/interface/: __init__.py
src/app/setup/: db.py  startup.py
src/chats/dependencies/: repositories.py  use_cases.py
src/chats/domain/: entities.py  schemas.py
src/di/: __init__.py  container.py
src/di/domain/: __init__.py
src/email/dependencies/: use_cases.py
src/email/domain/: entities.py
src/email/templates/: verification.html
src/features/agent_settings/: __init__.py
src/features/agents/: __init__.py
src/features/chats/: __init__.py
src/features/email/: __init__.py
src/features/knowledge_base/: __init__.py
src/features/messages/: __init__.py
src/features/sessions/: __init__.py
src/http/: __init__.py
src/persistence/: __init__.py
src/security/: __init__.py
tests/agent_settings/: test_create.py  test_delete.py  test_resource.py  test_update.py
tests/agents/: test_collection.py  test_create.py  test_delete.py  test_resource.py  test_update.py
tests/chats/: test_collection.py  test_create.py  test_delete.py  test_resource.py
tests/email/: test_verify_email.py
tests/knowledge_base/: test_collection.py  test_delete.py  test_update.py  test_upload.py
tests/messages/: test_collection.py  test_create.py  test_delete.py
tests/users/: test_delete.py  test_login.py  test_update.py
(+278 files in other folders)
