[project]
name = "generic-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.22",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.123.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "strawberry-graphql[fastapi]>=0.287.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
app = "src.app.main:app"
